--- a/Uniswap_Liquidity.ipynb
+++ b/Uniswap_Liquidity.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ecabfb5d",
    "metadata": {},
    "outputs": [
@@ -195,12 +195,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-22 20:26:a42 <module> INFO Ethereum connected: True\n",
-      "2022-05-22 20:26:a42 main INFO factory2: 0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f\n",
-      "2022-05-22 20:26:a42 main INFO factory3: 0x1F98431c8aD98523631AE4a59f267346ea31F984\n",
-      "2022-05-22 20:26:a43 main INFO pools count= 0..\n",
-      "2022-05-22 20:27:a17 main INFO pools count= 94..\n",
-      "2022-05-22 20:27:a45 main INFO pools count= 126..\n"
+      "2022-05-25 00:53:a23 <module> INFO Ethereum connected: True\n",
+      "2022-05-25 00:53:a23 main INFO factory2: 0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f\n",
+      "2022-05-25 00:53:a23 main INFO factory3: 0x1F98431c8aD98523631AE4a59f267346ea31F984\n",
+      "2022-05-25 00:53:a23 main INFO pools count= 0..\n",
+      "2022-05-25 00:53:a55 main INFO pools count= 94..\n",
+      "2022-05-25 00:54:a21 main INFO pools count= 126..\n",
+      "2022-05-25 00:54:a45 main INFO pools count= 198..\n",
+      "2022-05-25 00:55:a11 main INFO pools count= 243\n",
+      "2022-05-25 00:55:a13 main INFO pools final count= 242\n"
      ]
     }
    ],
@@ -219,10 +222,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1298cd1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pool</th>\n",
+       "      <th>token</th>\n",
+       "      <th>token_decimals</th>\n",
+       "      <th>base_token</th>\n",
+       "      <th>base_decimals</th>\n",
+       "      <th>version</th>\n",
+       "      <th>fee</th>\n",
+       "      <th>OwnBalance</th>\n",
+       "      <th>WBTC</th>\n",
+       "      <th>USDC</th>\n",
+       "      <th>DAI</th>\n",
+       "      <th>WETH</th>\n",
+       "      <th>batchtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0xBb2b8038a1640196FbE3e38816F3e67Cba72D940</td>\n",
+       "      <td>WETH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>WBTC</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Uniswap V2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.163095e+03</td>\n",
+       "      <td>347.352415</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0xe6ff8b9A37B0fab776134636D9981Aa778c4e718</td>\n",
+       "      <td>WETH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>WBTC</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>4.297545e-01</td>\n",
+       "      <td>0.026656</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x4585FE77225b41b697C938B018E2Ac67Ac5a20c0</td>\n",
+       "      <td>WETH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>WBTC</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>3.403643e+04</td>\n",
+       "      <td>1379.514587</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0xCBCdF9626bC03E24f779434178A73a0B4bad62eD</td>\n",
+       "      <td>WETH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>WBTC</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>6.996231e+04</td>\n",
+       "      <td>3256.091280</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F</td>\n",
+       "      <td>WETH</td>\n",
+       "      <td>18</td>\n",
+       "      <td>WBTC</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>2.290653e+01</td>\n",
+       "      <td>1.509365</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>0xB20bd5D04BE54f870D5C0d3cA85d82b34B836405</td>\n",
+       "      <td>USDT</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DAI</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Uniswap V2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.390031e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.394303e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>0x6f48ECa74B38d2936B02ab603FF4e36A6C0E3A77</td>\n",
+       "      <td>USDT</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DAI</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0005</td>\n",
+       "      <td>1.307879e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.538865e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>0x4773E2C1c0B400a16DfeC4ca6E305141859a5542</td>\n",
+       "      <td>USDT</td>\n",
+       "      <td>6</td>\n",
+       "      <td>DAI</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>2.000000e-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.000000e+00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>0x67A6C35f48aCEd972c0BC9168ec3Eb027B52BF7E</td>\n",
+       "      <td>FXS</td>\n",
+       "      <td>18</td>\n",
+       "      <td>DAI</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>3.000000e-18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.000000e-18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>0xe4f916Ec234Ea3a057879b5Fec6F18A8F9032c4a</td>\n",
+       "      <td>FXS</td>\n",
+       "      <td>18</td>\n",
+       "      <td>DAI</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Uniswap V3</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>2.000000e-18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.000000e-18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-05-24 12:55:13.103132</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>242 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           pool token  token_decimals  \\\n",
+       "0    0xBb2b8038a1640196FbE3e38816F3e67Cba72D940  WETH              18   \n",
+       "1    0xe6ff8b9A37B0fab776134636D9981Aa778c4e718  WETH              18   \n",
+       "2    0x4585FE77225b41b697C938B018E2Ac67Ac5a20c0  WETH              18   \n",
+       "3    0xCBCdF9626bC03E24f779434178A73a0B4bad62eD  WETH              18   \n",
+       "4    0x6Ab3bba2F41e7eAA262fa5A1A9b3932fA161526F  WETH              18   \n",
+       "..                                          ...   ...             ...   \n",
+       "237  0xB20bd5D04BE54f870D5C0d3cA85d82b34B836405  USDT               6   \n",
+       "238  0x6f48ECa74B38d2936B02ab603FF4e36A6C0E3A77  USDT               6   \n",
+       "239  0x4773E2C1c0B400a16DfeC4ca6E305141859a5542  USDT               6   \n",
+       "240  0x67A6C35f48aCEd972c0BC9168ec3Eb027B52BF7E   FXS              18   \n",
+       "241  0xe4f916Ec234Ea3a057879b5Fec6F18A8F9032c4a   FXS              18   \n",
+       "\n",
+       "    base_token  base_decimals     version     fee    OwnBalance         WBTC  \\\n",
+       "0         WBTC              8  Uniswap V2     NaN  5.163095e+03   347.352415   \n",
+       "1         WBTC              8  Uniswap V3  0.0001  4.297545e-01     0.026656   \n",
+       "2         WBTC              8  Uniswap V3  0.0005  3.403643e+04  1379.514587   \n",
+       "3         WBTC              8  Uniswap V3  0.0030  6.996231e+04  3256.091280   \n",
+       "4         WBTC              8  Uniswap V3  0.0100  2.290653e+01     1.509365   \n",
+       "..         ...            ...         ...     ...           ...          ...   \n",
+       "237        DAI             18  Uniswap V2     NaN  3.390031e+06          NaN   \n",
+       "238        DAI             18  Uniswap V3  0.0005  1.307879e+06          NaN   \n",
+       "239        DAI             18  Uniswap V3  0.0030  2.000000e-06          NaN   \n",
+       "240        DAI             18  Uniswap V3  0.0001  3.000000e-18          NaN   \n",
+       "241        DAI             18  Uniswap V3  0.0100  2.000000e-18          NaN   \n",
+       "\n",
+       "     USDC           DAI  WETH                  batchtime  \n",
+       "0     NaN           NaN   NaN 2022-05-24 12:55:13.103132  \n",
+       "1     NaN           NaN   NaN 2022-05-24 12:55:13.103132  \n",
+       "2     NaN           NaN   NaN 2022-05-24 12:55:13.103132  \n",
+       "3     NaN           NaN   NaN 2022-05-24 12:55:13.103132  \n",
+       "4     NaN           NaN   NaN 2022-05-24 12:55:13.103132  \n",
+       "..    ...           ...   ...                        ...  \n",
+       "237   NaN  3.394303e+06   NaN 2022-05-24 12:55:13.103132  \n",
+       "238   NaN  2.538865e+05   NaN 2022-05-24 12:55:13.103132  \n",
+       "239   NaN  9.000000e+00   NaN 2022-05-24 12:55:13.103132  \n",
+       "240   NaN  2.000000e-18   NaN 2022-05-24 12:55:13.103132  \n",
+       "241   NaN  3.000000e-18   NaN 2022-05-24 12:55:13.103132  \n",
+       "\n",
+       "[242 rows x 13 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df = pd.DataFrame.from_dict(ret, orient = 'index').reset_index().rename(columns = {'index':'pool'})\n",
     "df['batchtime'] = datetime.utcnow()\n",
