--- a/Gearbox_CA.ipynb
+++ b/Gearbox_CA.ipynb
@@ -909,8 +909,8 @@
     "        CA_collateral_event = [x for x in collateral_events if x['onBehalfOf']== Borrower] # Open\n",
     "        if len(CA_collateral_event) > 0:\n",
     "            Collateral = Collateral + sum(\n",
-    "                                            [x['value']*(allowedTokens[x['token']]['Price_USD'])*(10**-allowedTokens[x['token']]['decimals'])\n",
-    "                                             /allowedTokens[cm_dict[row.CM]['token']]['Price_USD']*(10**-row.Decimals)\n",
+    "                                            [(x['value']*(allowedTokens[x['token']]['Price_USD'])*(10**-allowedTokens[x['token']]['decimals']))\n",
+    "                                             /(allowedTokens[cm_dict[row.CM]['token']]['Price_USD']*(10**-row.Decimals))\n",
     "                                            for x in CA_collateral_event \n",
     "                                            if allowedTokens[cm_dict[row.CM]['token']]['Price_USD']>0\n",
     "                                            ]\n",
@@ -3556,7 +3556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c9e53b",
+   "id": "b854bb05",
    "metadata": {},
    "outputs": [],
    "source": []
